kubernetes/apps/default/proxmox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: default
spec:
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  namespace: default
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: https
    port: 8006
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.1.20"
