kubernetes/apps/default/proxmox/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxmox
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - proxmox.home.axelfrache.com
  rules:
    - backendRefs:
        - name: proxmox
          port: 8006
